--- a/index.html
+++ b/index.html
@@ -39,27 +39,31 @@
         </header>
         #slide
         <div class="container-carousel">
-        <div id="carousel-exemplo" class="carousel carousel-fade slide" data-bs-ride="carousel">
-            <div class="carousel-inner">
-                <div class="carousel-item active" data-bs-interval="3000">
-                    <img class="d-block w-100" style="max-height: 391px" src="https://cdn.pixabay.com/photo/2023/08/19/13/42/water-8200502_1280.jpg" />
-                    <div class="carousel-caption">
-                    <h2>Aquático</h2>
+        <div class="row">
+            <div class="col-12 col-md-4">
+                <div id="carousel-exemplo" class="carousel carousel-fade slide" data-bs-ride="carousel">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active" data-bs-interval="3000">
+                            <img class="d-block w-100" style="max-height: 391px" src="https://cdn.pixabay.com/photo/2023/08/19/13/42/water-8200502_1280.jpg" />
+                            <div class="carousel-caption">
+                            <h2>Aquático</h2>
+                            </div>
+                        </div>
+                        <div class="carousel-item" data-bs-interval="3000">
+                            <img class="d-block w-100" style="max-height: 391px" src="images.img/slide2.jpg" />
+                            <div class="carousel-caption">
+                                <h2>Terrestre</h2>
+                                </div>
+                        </div>
+                        <div class="carousel-item" data-bs-interval="3000">
+                            <img class="d-block w-100" style="max-height: 391px" src="images.img/slide3.jpg" />
+                            <div class="carousel-caption">
+                                <h2>Urbano</h2>
+                                </div>
+                        </div>
                     </div>
-                </div>
-                <div class="carousel-item" data-bs-interval="3000">
-                    <img class="d-block w-100" style="max-height: 391px" src="images.img/slide2.jpg" />
-                    <div class="carousel-caption">
-                        <h2>Terrestre</h2>
-                        </div>
-                </div>
-                <div class="carousel-item" data-bs-interval="3000">
-                    <img class="d-block w-100" style="max-height: 391px" src="images.img/slide3.jpg" />
-                    <div class="carousel-caption">
-                        <h2>Urbano</h2>
-                        </div>
-                </div>
             </div>
+        </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carousel-exemplo" data-bs-slide="prev">
                 <span class="carousel-control-prev-icon"></span>
             </button>
@@ -100,7 +104,7 @@
         <h1>|Notícias</h1>
         #cards
         <div class="row">
-            <div class="col-4">
+            <div class="col-12 col-md-4">
                 <div class="card text-bg-dark">
                     <div class="card-header">
                         O polêmico processo da Disney
@@ -121,7 +125,7 @@ A BBC procurou representantes da Disney e Jeffrey Piccolo para comentar o caso, 
                     </div>
                 </div>
             </div>
-            <div class="col-4">
+            <div class="col-12 col-md-4">
                 <div class="card">
                     <img src="images.img/silvio_noticia.jpeg" alt="Papel de parede">
                     <div class="card-body">
@@ -136,7 +140,7 @@ Talvez por isso, ao longo de sua carreira, ele acabou protagonizando vários mom
                     </div>
                 </div>
             </div>
-            <div class="col-4">
+            <div class="col-12 col-md-4">
                 <div class="card text-bg-dark">
                     <div class="card-header">
                         Impacto da Tecnologia na medicina
