--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <title>Praticando</title>
     <!-- Importando o CSS -->
     <link rel="stylesheet" href="index.css">
@@ -45,7 +46,7 @@
                 <div id="carousel-exemplo" class="carousel carousel-fade slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active" data-bs-interval="3000">
-                            <img class="d-block w-100" style="max-height: 391px" src="https://cdn.pixabay.com/photo/2023/08/19/13/42/water-8200502_1280.jpg" />
+                            <img class="d-block w-100" style="max-height: 391px" src="https://quadro18.jpg" />
                             <div class="carousel-caption">
                             <h2>Aquático</h2>
                             </div>
