--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header>
         <div class="navbar navbar-expand-lg">          
             <div class="container">
-            <h1>𝒬𝒹ℯ𝒶𝓇𝓉ℯ𝓈</h1>
+            <h1>Qdeartes</h1>
             
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#menu">
                 <span class="navbar-toggler-icon"></span>
@@ -39,26 +39,25 @@
                 </nav>
             </div>
         </header>
-        #slide
         <div class="container-carousel">
         <div class="row">
             <div class="col-12 col-md-4"> 
                 <div id="carousel-exemplo" class="carousel carousel-fade slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active" data-bs-interval="3000">
-                            <img class="d-block w-100" style="max-height: 391px" src="https://quadro18.jpg" />
+                            <img class="d-block w-100" style="max-height: 391px" src="images.img/quadro2.jpg" alt="quadro" />
                             <div class="carousel-caption">
                             <h2>Aquático</h2>
                             </div>
                         </div>
                         <div class="carousel-item" data-bs-interval="3000">
-                            <img class="d-block w-100" style="max-height: 391px" src="images.img/slide2.jpg" />
+                            <img class="d-block w-100" style="max-height: 391px" src="images.img/quadro1.jpg" />
                             <div class="carousel-caption">
-                                <h2>Terrestre</h2>
+                                <h2>Abstração</h2>
                                 </div>
                         </div>
                         <div class="carousel-item" data-bs-interval="3000">
-                            <img class="d-block w-100" style="max-height: 391px" src="images.img/slide3.jpg" />
+                            <img class="d-block w-100" style="max-height: 391px" src="images.img/quadro7.jpg" />
                             <div class="carousel-caption">
                                 <h2>Urbano</h2>
                                 </div>
@@ -119,7 +118,7 @@
 
 A ausência de um sujeito ou forma discernível convida o espectador a interpretar a peça de maneira pessoal, permitindo que diferentes emoções e pensamentos sejam despertados em cada observador. Esta abstração torna a obra interessante, pois cada pessoa pode ver algo único e significativo nela.
                         </p>
-                        <a href="https://whatsapp.com" class="btn btn-primary">Veja mais</a>
+                        <a href="https://bit.ly/qdartes" class="btn btn-primary">Veja mais</a>
                     </div>
                 </div>
             </div>
@@ -136,7 +135,7 @@ A composição parece orgânica e aleatória, lembrando formações naturais com
 
 A ausência de um tema ou forma claramente definida permite que cada pessoa veja algo diferente na pintura, tornando-a uma peça única e envolvente. É uma obra que certamente pode evocar diversas emoções e pensamentos, dependendo do ponto de vista de quem a observa.
                         </p>
-                        <a href="https://whatsapp.com" class="btn btn-primary">Veja mais</a>
+                        <a href="https://bit.ly/qdartes" class="btn btn-primary">Veja mais</a>
                     </div>
                 </div>
             </div>
@@ -178,7 +177,7 @@ A complexidade da composição e a interação das cores tornam a imagem visualm
 
 A ausência de um sujeito ou forma discernível convida o espectador a interpretar a peça de maneira pessoal, permitindo que diferentes emoções e pensamentos sejam despertados em cada observador. Esta abstração torna a obra interessante, pois cada pessoa pode ver algo único e significativo nela.
                         </p>
-                        <a href="https://whatsapp.com" class="btn btn-primary">Veja mais</a>
+                        <a href="https://bit.ly/qdartes" class="btn btn-primary">Veja mais</a>
                     </div>
                 </div>
             </div>
@@ -195,7 +194,7 @@ A composição parece orgânica e aleatória, lembrando formações naturais com
 
 A ausência de um tema ou forma claramente definida permite que cada pessoa veja algo diferente na pintura, tornando-a uma peça única e envolvente. É uma obra que certamente pode evocar diversas emoções e pensamentos, dependendo do ponto de vista de quem a observa.
                         </p>
-                        <a href="https://whatsapp.com" class="btn btn-primary">Veja mais</a>
+                        <a href="https://bit.ly/qdartes" class="btn btn-primary">Veja mais</a>
                     </div>
                 </div>
             </div>
@@ -237,7 +236,7 @@ A complexidade da composição e a interação das cores tornam a imagem visualm
 
 A ausência de um sujeito ou forma discernível convida o espectador a interpretar a peça de maneira pessoal, permitindo que diferentes emoções e pensamentos sejam despertados em cada observador. Esta abstração torna a obra interessante, pois cada pessoa pode ver algo único e significativo nela.
                         </p>
-                        <a href="https://whatsapp.com" class="btn btn-primary">Veja mais</a>
+                        <a href="https://bit.ly/qdartes" class="btn btn-primary">Veja mais</a>
                     </div>
                 </div>
             </div>
@@ -254,7 +253,7 @@ A composição parece orgânica e aleatória, lembrando formações naturais com
 
 A ausência de um tema ou forma claramente definida permite que cada pessoa veja algo diferente na pintura, tornando-a uma peça única e envolvente. É uma obra que certamente pode evocar diversas emoções e pensamentos, dependendo do ponto de vista de quem a observa.
                         </p>
-                        <a href="https://whatsapp.com" class="btn btn-primary">Veja mais</a>
+                        <a href="https://bit.ly/qdartes" class="btn btn-primary">Veja mais</a>
                     </div>
                 </div>
             </div>
@@ -296,7 +295,7 @@ A complexidade da composição e a interação das cores tornam a imagem visualm
 
 A ausência de um sujeito ou forma discernível convida o espectador a interpretar a peça de maneira pessoal, permitindo que diferentes emoções e pensamentos sejam despertados em cada observador. Esta abstração torna a obra interessante, pois cada pessoa pode ver algo único e significativo nela.
                         </p>
-                        <a href="https://whatsapp.com" class="btn btn-primary">Veja mais</a>
+                        <a href="https://bit.ly/qdartes" class="btn btn-primary">Veja mais</a>
                     </div>
                 </div>
             </div>
@@ -313,7 +312,7 @@ A composição parece orgânica e aleatória, lembrando formações naturais com
 
 A ausência de um tema ou forma claramente definida permite que cada pessoa veja algo diferente na pintura, tornando-a uma peça única e envolvente. É uma obra que certamente pode evocar diversas emoções e pensamentos, dependendo do ponto de vista de quem a observa.
                         </p>
-                        <a href="https://whatsapp.com" class="btn btn-primary">Veja mais</a>
+                        <a href="https://bit.ly/qdartes" class="btn btn-primary">Veja mais</a>
                     </div>
                 </div>
             </div>
@@ -355,7 +354,7 @@ A complexidade da composição e a interação das cores tornam a imagem visualm
 
 A ausência de um sujeito ou forma discernível convida o espectador a interpretar a peça de maneira pessoal, permitindo que diferentes emoções e pensamentos sejam despertados em cada observador. Esta abstração torna a obra interessante, pois cada pessoa pode ver algo único e significativo nela.
                         </p>
-                        <a href="https://whatsapp.com" class="btn btn-primary">Veja mais</a>
+                        <a href="https://bit.ly/qdartes" class="btn btn-primary">Veja mais</a>
                     </div>
                 </div>
             </div>
@@ -372,7 +371,7 @@ A composição parece orgânica e aleatória, lembrando formações naturais com
 
 A ausência de um tema ou forma claramente definida permite que cada pessoa veja algo diferente na pintura, tornando-a uma peça única e envolvente. É uma obra que certamente pode evocar diversas emoções e pensamentos, dependendo do ponto de vista de quem a observa.
                         </p>
-                        <a href="https://whatsapp.com" class="btn btn-primary">Veja mais</a>
+                        <a href="https://bit.ly/qdartes" class="btn btn-primary">Veja mais</a>
                     </div>
                 </div>
             </div>
@@ -414,7 +413,7 @@ A complexidade da composição e a interação das cores tornam a imagem visualm
 
 A ausência de um sujeito ou forma discernível convida o espectador a interpretar a peça de maneira pessoal, permitindo que diferentes emoções e pensamentos sejam despertados em cada observador. Esta abstração torna a obra interessante, pois cada pessoa pode ver algo único e significativo nela.
                         </p>
-                        <a href="https://whatsapp.com" class="btn btn-primary">Veja mais</a>
+                        <a href="https://bit.ly/qdartes" class="btn btn-primary">Veja mais</a>
                     </div>
                 </div>
             </div>
@@ -431,7 +430,7 @@ A composição parece orgânica e aleatória, lembrando formações naturais com
 
 A ausência de um tema ou forma claramente definida permite que cada pessoa veja algo diferente na pintura, tornando-a uma peça única e envolvente. É uma obra que certamente pode evocar diversas emoções e pensamentos, dependendo do ponto de vista de quem a observa.
                         </p>
-                        <a href="https://whatsapp.com" class="btn btn-primary">Veja mais</a>
+                        <a href="https://bit.ly/qdartes" class="btn btn-primary">Veja mais</a>
                     </div>
                 </div>
             </div>
@@ -473,7 +472,7 @@ A complexidade da composição e a interação das cores tornam a imagem visualm
 
 A ausência de um sujeito ou forma discernível convida o espectador a interpretar a peça de maneira pessoal, permitindo que diferentes emoções e pensamentos sejam despertados em cada observador. Esta abstração torna a obra interessante, pois cada pessoa pode ver algo único e significativo nela.
                         </p>
-                        <a href="https://whatsapp.com" class="btn btn-primary">Veja mais</a>
+                        <a href="https://bit.ly/qdartes" class="btn btn-primary">Veja mais</a>
                     </div>
                 </div>
             </div>
@@ -490,7 +489,7 @@ A composição parece orgânica e aleatória, lembrando formações naturais com
 
 A ausência de um tema ou forma claramente definida permite que cada pessoa veja algo diferente na pintura, tornando-a uma peça única e envolvente. É uma obra que certamente pode evocar diversas emoções e pensamentos, dependendo do ponto de vista de quem a observa.
                         </p>
-                        <a href="https://whatsapp.com" class="btn btn-primary">Veja mais</a>
+                        <a href="https://bit.ly/qdartes" class="btn btn-primary">Veja mais</a>
                     </div>
                 </div>
             </div>
@@ -532,7 +531,7 @@ A complexidade da composição e a interação das cores tornam a imagem visualm
 
 A ausência de um sujeito ou forma discernível convida o espectador a interpretar a peça de maneira pessoal, permitindo que diferentes emoções e pensamentos sejam despertados em cada observador. Esta abstração torna a obra interessante, pois cada pessoa pode ver algo único e significativo nela.
                         </p>
-                        <a href="https://whatsapp.com" class="btn btn-primary">Veja mais</a>
+                        <a href="https://bit.ly/qdartes" class="btn btn-primary">Veja mais</a>
                     </div>
                 </div>
             </div>
@@ -549,7 +548,7 @@ A composição parece orgânica e aleatória, lembrando formações naturais com
 
 A ausência de um tema ou forma claramente definida permite que cada pessoa veja algo diferente na pintura, tornando-a uma peça única e envolvente. É uma obra que certamente pode evocar diversas emoções e pensamentos, dependendo do ponto de vista de quem a observa.
                         </p>
-                        <a href="https://whatsapp.com" class="btn btn-primary">Veja mais</a>
+                        <a href="https://bit.ly/qdartes" class="btn btn-primary">Veja mais</a>
                     </div>
                 </div>
             </div>
@@ -591,7 +590,7 @@ A complexidade da composição e a interação das cores tornam a imagem visualm
 
 A ausência de um sujeito ou forma discernível convida o espectador a interpretar a peça de maneira pessoal, permitindo que diferentes emoções e pensamentos sejam despertados em cada observador. Esta abstração torna a obra interessante, pois cada pessoa pode ver algo único e significativo nela.
                         </p>
-                        <a href="https://whatsapp.com" class="btn btn-primary">Veja mais</a>
+                        <a href="https://bit.ly/qdartes" class="btn btn-primary">Veja mais</a>
                     </div>
                 </div>
             </div>
@@ -608,7 +607,7 @@ A composição parece orgânica e aleatória, lembrando formações naturais com
 
 A ausência de um tema ou forma claramente definida permite que cada pessoa veja algo diferente na pintura, tornando-a uma peça única e envolvente. É uma obra que certamente pode evocar diversas emoções e pensamentos, dependendo do ponto de vista de quem a observa.
                         </p>
-                        <a href="https://whatsapp.com" class="btn btn-primary">Veja mais</a>
+                        <a href="https://bit.ly/qdartes" class="btn btn-primary">Veja mais</a>
                     </div>
                 </div>
             </div>
